tests/baselines/reference/controlFlowIIFE.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
error TS2468: Cannot find global value 'Promise'.
tests/cases/conformance/controlFlow/controlFlowIIFE.ts(64,5): error TS2454: Variable 'v' is used before being assigned.
tests/cases/conformance/controlFlow/controlFlowIIFE.ts(69,6): error TS2705: An async function or method in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your `--lib` option.
tests/cases/conformance/controlFlow/controlFlowIIFE.ts(72,5): error TS2454: Variable 'v' is used before being assigned.


!!! error TS2318: Cannot find global type 'IterableIterator'.
!!! error TS2468: Cannot find global value 'Promise'.
==== tests/cases/conformance/controlFlow/controlFlowIIFE.ts (3 errors) ====
    declare function getStringOrNumber(): string | number;
    
    function f1() {
        let x = getStringOrNumber();
        if (typeof x === "string") {
            let n = function() {
                return x.length;
            }();
        }
    }
    
    function f2() {
        let x = getStringOrNumber();
        if (typeof x === "string") {
            let n = (function() {
                return x.length;
            })();
        }
    }
    
    function f3() {
        let x = getStringOrNumber();
        let y: number;
        if (typeof x === "string") {
            let n = (z => x.length + y + z)(y = 1);
        }
    }
    
    // Repros from #8381
    
    let maybeNumber: number | undefined;
    (function () {
        maybeNumber = 1;
    })();
    maybeNumber++;
    if (maybeNumber !== undefined) {
        maybeNumber++;
    }
    
    let test: string | undefined;
    if (!test) {
        throw new Error('Test is not defined');
    }
    (() => {
        test.slice(1); // No error
    })();
    
    // Repro from #23565
    
    function f4() {
        let v: number;
        (function() {
            v = 1;
        })();
        v;
    }
    
    function f5() {
        let v: number;
        (function*() {
            yield 1;
            v = 1;
        })();
        v; // still undefined
        ~
!!! error TS2454: Variable 'v' is used before being assigned.
    }
    
    function f6() {
        let v: number;
        (async function() {
         ~~~~~
!!! error TS2705: An async function or method in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your `--lib` option.
            v = await 1;
        })();
        v; // still undefined
        ~
!!! error TS2454: Variable 'v' is used before being assigned.
    }